JEKT-1272 Copy pipeline from DART one ❇️ New     - Dataset        - DS_SAP_01_VBPA     - Pipeline        - SAP_MD_SLS_DOC_PTNR_FUNC_HM2
🔁 Modified
    - Dataset
       - MD_SLS_DOC_PTNR_FUNC
       - DS_SAP_01_VBAK

--- a/src/datasets/DS_SAP_01_VBPA/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBPA/pbt_aspects.yml
@@ -2,219 +2,219 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: SRC_SYS_CD
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SLS_DOC_ITEM_NBR
+  - name: MANDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SLS_DOC_ID
+  - name: ABLAD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PTNR_FUNC_CD
+  - name: LAND1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: COMPANY_CD
+  - name: ADRDA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SLS_ORDR_TYPE_CD
+  - name: XCPDK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FURTHER_PTNR_IND
+  - name: HITYP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SUP_NUM
+  - name: PRFRE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ADDR_USG_CD
+  - name: BOKRE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CUST_NUM
+  - name: HISTUNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CTRY_CD
+  - name: KNREF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PERS_NUM
+  - name: LZONE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: NUM_CNTCT_PRSN
+  - name: VBELN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: UNLD_PT
+  - name: HZUOR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ADDR_IN
+  - name: STCEG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: IN_ACCT_ONE_TM_ACCT
+  - name: PARVW_FF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CUST_HIER_TYPE
+  - name: ADRNP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: RLVNT_PRC_DTRMN_ID
+  - name: KALE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: IN_CUST_REBT_RLVNT
+  - name: _DATAAGING
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LVL_NUM_WTHN_HIER
+  - name: DUMMY_SDDOCPARTNER_INCL_EEW_PS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CUST_DESC_PTNR
+  - name: ASSIGNED_BP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TRSPN_ZN_GOODS_DELV
+  - name: ADDR_OPERATION
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ASGNMT_HIER
+  - name: ADDR_TYPE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VAT_REGS_NUM
+  - name: POSNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRSN_NUM
+  - name: BP_REF_ADRNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MANTN_APPT_CAL
+  - name: SDM_VERSION
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_ETL_ID
-    type: integer
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_CRT_DTTM
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l0_upt_
-    type: timestamp
+  - name: PARVW
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l1_upt_
-    type: timestamp
-    nullable: false
+  - name: KUNNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LIFNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PERNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PARNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ADRNR
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -226,8 +226,29 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _pk_md5_
-    type: string
+  - name: _upt_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _kafkaOffset_
+    type: long
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _createTime_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _kafkaTimestamp_
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -235,7 +256,7 @@ schema:
       tags: []
   - name: _deleted_
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
