--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -619,6 +619,23 @@ pipelines:
       - datasets/MD_BILL_DOC_HDR
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_SLS_DOC_PTNR_FUNC_HM2:
+    name: SAP_MD_SLS_DOC_PTNR_FUNC_HM2
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-11 14:58:12'
+    modifiedAt: '2023-04-11 15:08:46'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBPA
+      outputs:
+      - datasets/MD_SLS_DOC_PTNR_FUNC
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -775,7 +792,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-11 15:00:54'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -3835,7 +3852,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-31 18:51:09'
-    modifiedAt: '2023-03-31 19:01:48'
+    modifiedAt: '2023-04-11 15:00:54'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -3950,6 +3967,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-03-20 12:31:42'
         modifiedAt: '2023-03-20 12:31:42'
+  datasets/DS_SAP_01_VBPA:
+    name: DS_SAP_01_VBPA
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-04-11 15:08:14'
+    modifiedAt: '2023-04-11 15:08:14'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-04-11 15:08:14'
+        modifiedAt: '2023-04-11 15:08:14'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
