--- a/src/datasets/DS_SAP_01_VBAK/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBAK/pbt_aspects.yml
@@ -2,7 +2,7 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: MANDT
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
@@ -10,6 +10,13 @@ schema:
       mappings: []
       tags: []
   - name: VBELN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -807,462 +814,98 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: OIPBL
+  - name: _SOPROMET_LRESN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LAST_CHANGED_BY_USER
+  - name: _SOPROMET_EQUNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: HANDOVERLOC
+  - name: _SOPROMET_KZLEI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EXT_BUS_SYST_ID
+  - name: _SOPROMET_NBOMU
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EXT_REF_DOC_ID
+  - name: _SOPROMET_RSTYP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EXT_REV_TMSTMP
+  - name: _SOPROMET_VDATE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: APM_APPROVAL_STATUS
+  - name: _SOPROMET_ODATE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: APM_APPROVAL_REASON
+  - name: _SOPROMET_RDATE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: APM_REJECTION_REASON
+  - name: _SOPROMET_RTIME
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _DATAAGING
+  - name: _SOPROMET_FRDAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABSTK
+  - name: _SOPROMET_ABDAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BESTK
+  - name: _SOPROMET_TELF1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CMPSC
+  - name: _SOPROMET_LRSAM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CMPSD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMPSI
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMPSJ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMPSK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMPS_CM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMPS_TE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMGST
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: COSTA
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DCSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FKSAK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FMSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GBSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LFGSK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LFSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LSSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MANEK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RFGSK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RFSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SPSTG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRSTA
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVALL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVALS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVFAK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVFAS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVPRS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVVLK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVVLS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVK01
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVK02
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVK03
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVK04
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVK05
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVS01
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVS02
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVS03
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVS04
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVS05
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: WBSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOTAL_EMCST
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOTAL_SLCST
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOTAL_LCCST
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOTAL_PCSTA
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOTAL_DGSTA
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOTAL_SDSSTA
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DP_CLEAR_STA_HDR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DUMMY_SALESDOC_INCL_EEW_PS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZAPCGKH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: APCGK_EXTENDH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZABDATH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AD01FAREG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AD01BASDOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LASTVCHR
+  - name: _BITMYM_ASMNT
     type: string
     nullable: true
     metadata:
@@ -1276,98 +919,56 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: FSH_KVGR6
+  - name: SWENR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FSH_KVGR7
+  - name: SMENR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FSH_KVGR8
+  - name: PHASE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FSH_KVGR9
+  - name: MTLAUR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FSH_KVGR10
+  - name: STAGE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FSH_REREG
+  - name: HB_CONT_REASON
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FSH_CQ_CHECK
+  - name: HB_EXPDATE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FSH_VRSN_STATUS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSH_TRANSACTION
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSH_VAS_CG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSH_CANDATE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSH_SS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSH_OS_STG_CHANGE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: J_3GKBAUL
+  - name: HB_RESDATE
     type: string
     nullable: true
     metadata:
@@ -1465,259 +1066,112 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: DELIVERY_DATE_TYPE_RULE
+  - name: ZMYM_AUFNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SOLUTION_ORDER_ID
+  - name: ZZ_ALT_SH_ACTIVE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EXT_COMM_SYST_TYPE
+  - name: ZZOVHDRINV
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: RETRO_PURCHDOC_CREATION
+  - name: ZZMESAGE_TYPE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: B2B_MSG_PROCESSING_STATUS
+  - name: ZZ_ALT_SH_INDC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SDM_VERSION
+  - name: ZZ_RECALL_REFNO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: GLO_LOG_REF1_HD
+  - name: ZZ_APPLICANT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CROSSITEM_PRC_DATE
+  - name: ZZ_DATE_SIGN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BOB_STATUS
+  - name: ZZ_CLNC_ST_NO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TOTAL_DELIV_RELTD_BILLG_STA
+  - name: ZZ_FORBID_INDC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _DMBE_DEALNUMBER
+  - name: ZZEOW
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _DMBE_EVGIDRENEWAL
+  - name: ZZ_GOVT_PUR_REQ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _DMBE_EVGIDCANCEL
+  - name: ZZ_GOVT_PO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_LRESN
+  - name: ZZ_GOVT_CONT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_EQUNR
+  - name: ZZ_PRIOR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_KZLEI
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_NBOMU
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_RSTYP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_VDATE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_ODATE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_RDATE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_RTIME
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_FRDAT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_ABDAT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_TELF1
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_VEDAT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _BITMYM_REF_BOOK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_LRSAM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _BITMYM_ASMNT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _BITMYM_AUTO_PGI
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ1_TOTBILLING_SDH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ1_DISTRIBUTIONCHANEL_SDH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ1_NETPRICE_SDH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ1_SURCOVERRIDECODE_SDH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ1_DISCOVERRIDECODE_SDH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ1_CREATEDBYHEADER_SDH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ1_CREATEDONHEADER_SDH
+  - name: ZZ_OVER_H
     type: string
     nullable: true
     metadata:
@@ -1759,7 +1213,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
+  - name: _infa_bigint_sequence_
     type: string
     nullable: true
     metadata:
