JEKT-314 ❇️ New     - Dataset        - DS_JDE_01_F43121        - DS_JDE_01_F4211
🔁 Modified
    - Pipeline
       - JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -587,9 +587,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-11 14:37:19'
-    modifiedAt: '2023-04-11 15:07:47'
+    modifiedAt: '2023-04-11 15:13:13'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_JDE_01_F4211
+      - datasets/DS_JDE_01_F43121
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -3774,6 +3776,36 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-04-10 13:17:10'
         modifiedAt: '2023-04-10 13:17:10'
+  datasets/DS_JDE_01_F43121:
+    name: DS_JDE_01_F43121
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-11 15:11:51'
+    modifiedAt: '2023-04-11 15:11:51'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-11 15:11:51'
+        modifiedAt: '2023-04-11 15:11:51'
+  datasets/DS_JDE_01_F4211:
+    name: DS_JDE_01_F4211
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-11 15:13:10'
+    modifiedAt: '2023-04-11 15:13:11'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-11 15:13:11'
+        modifiedAt: '2023-04-11 15:13:11'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
