JEKT-176 (Added MBP system to the Job) 🔁 Modified     - Pipeline        - SAP_MD_MATL_INV_MBP     - Job        - JOB_MD_MATL_INV

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -566,7 +566,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-10 21:21:38'
-    modifiedAt: '2023-04-11 19:00:32'
+    modifiedAt: '2023-04-11 20:37:57'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARD
@@ -4795,6 +4795,7 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
+    - pipelines/SAP_MD_MATL_INV_MBP
     - pipelines/JDE_01_MD_MATL_INV
     - pipelines/SAP_MD_MATL_INV_P01
     jobClusterMode:
@@ -4803,7 +4804,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-04 14:54:35'
-    modifiedAt: '2023-04-11 20:33:33'
+    modifiedAt: '2023-04-11 21:21:32'
     author: natkins7@its.jnj.com
   jobs/JOB_MD_MATL_BOM:
     name: JOB_MD_MATL_BOM
