JEKT-1210 ❇️ New     - Dataset        - DS_SAP_MKPF     - Pipeline        - SAP_MD_MATL_MVMT_HDR
🔁 Modified
    - Dataset
       - MD_MATL_MVMT_HDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -619,6 +619,22 @@ pipelines:
       - datasets/MD_BILL_DOC_HDR
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_MVMT_HDR:
+    name: SAP_MD_MATL_MVMT_HDR
+    description: ''
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-12 09:40:18'
+    modifiedAt: '2023-04-12 11:38:52'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_MKPF
+      outputs:
+      - datasets/MD_MATL_MVMT_HDR
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -1915,7 +1931,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-12 10:11:46'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -3965,6 +3981,21 @@ datasets:
         author: ypatel8@its.jnj.com
         createdAt: '2023-04-11 15:58:17'
         modifiedAt: '2023-04-11 15:58:17'
+  datasets/DS_SAP_MKPF:
+    name: DS_SAP_MKPF
+    description: ''
+    author: ggrilo1@its.jnj.com
+    createdAt: '2023-04-12 09:47:10'
+    modifiedAt: '2023-04-12 10:25:38'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ggrilo1@its.jnj.com
+        createdAt: '2023-04-12 09:47:10'
+        modifiedAt: '2023-04-12 09:47:10'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
