JEKT-136 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_BBL        - JDE_MD_SLS_ORDR_LINE_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR     - Dataset        - MD_SLS_ORDR_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1272,14 +1272,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_SLS_ORDR_LINE:
-    name: SAP_01_MD_SLS_ORDR_LINE
+    name: SAP_01_MD_SLS_ORDR_LINE_BBL
     description: ''
     author: fsano1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-20 12:41:02'
-    modifiedAt: '2023-04-11 15:23:48'
+    modifiedAt: '2023-04-12 12:34:25'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1300,14 +1300,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/JDE_MD_SLS_ORDR_LINE_:
-    name: JDE_MD_SLS_ORDR_LINE_
+    name: JDE_MD_SLS_ORDR_LINE_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR
     description: ''
     author: fsano1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-10 16:51:20'
-    modifiedAt: '2023-04-11 15:42:06'
+    modifiedAt: '2023-04-11 16:33:47'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4211
@@ -1907,7 +1907,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-11 15:42:06'
+    modifiedAt: '2023-04-11 16:10:15'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
