JEKT-314 ❇️ New     - Dataset        - JDE_MD_DELV_LINE
🔁 Modified
    - Pipeline
       - JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
    - Dataset
       - DS_JDE_01_F43121
       - DS_JDE_01_F4211

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -587,12 +587,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-11 14:37:19'
-    modifiedAt: '2023-04-12 13:37:26'
+    modifiedAt: '2023-04-12 13:47:24'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4211
       - datasets/DS_JDE_01_F43121
-      outputs: []
+      outputs:
+      - datasets/JDE_MD_DELV_LINE
     subgraphs: []
     dependencies: {}
 datasets:
@@ -3781,7 +3782,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-04-11 15:11:51'
-    modifiedAt: '2023-04-12 13:22:30'
+    modifiedAt: '2023-04-12 13:46:59'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -3796,7 +3797,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-04-11 15:13:10'
-    modifiedAt: '2023-04-12 13:23:29'
+    modifiedAt: '2023-04-12 13:47:24'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -3806,6 +3807,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-04-11 15:13:11'
         modifiedAt: '2023-04-11 15:13:11'
+  datasets/JDE_MD_DELV_LINE:
+    name: JDE_MD_DELV_LINE
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-12 13:45:30'
+    modifiedAt: '2023-04-12 13:45:30'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-12 13:45:30'
+        modifiedAt: '2023-04-12 13:45:30'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
