--- a/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
+++ b/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
@@ -18,7 +18,7 @@ schema:
       tags: []
   - name: PRCHSNG_ORG_NUM
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -31,14 +31,14 @@ schema:
       mappings: []
       tags: []
   - name: PRCH_BLK_IND
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DEL_IND
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
