JEKT-1209 New Pipeline created ❇️ New     - Pipeline        - SAP_MD_MATL_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI     - Dataset        - DS_SAP_MARA_01

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -619,6 +619,21 @@ pipelines:
       - datasets/MD_BILL_DOC_HDR
     subgraphs: []
     dependencies: {}
+  pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI:
+    name: SAP_MD_MATL_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
+    description: MD Material for SAP systems with matching L0 schema and mapping
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-12 16:16:52'
+    modifiedAt: '2023-04-12 16:31:34'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_MARA_01
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -3965,6 +3980,21 @@ datasets:
         author: ypatel8@its.jnj.com
         createdAt: '2023-04-11 15:58:17'
         modifiedAt: '2023-04-11 15:58:17'
+  datasets/DS_SAP_MARA_01:
+    name: DS_SAP_MARA_01
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-12 16:31:30'
+    modifiedAt: '2023-04-12 16:31:30'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-12 16:31:30'
+        modifiedAt: '2023-04-12 16:31:30'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
