--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,9 +627,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 16:16:52'
-    modifiedAt: '2023-04-12 16:31:34'
+    modifiedAt: '2023-04-12 16:33:56'
     datasets:
       inputs:
+      - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_01
       outputs: []
     subgraphs: []
@@ -3995,6 +3996,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-04-12 16:31:30'
         modifiedAt: '2023-04-12 16:31:30'
+  datasets/DS_SAP_MAKT_01:
+    name: DS_SAP_MAKT_01
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-12 16:33:53'
+    modifiedAt: '2023-04-12 16:33:53'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-12 16:33:53'
+        modifiedAt: '2023-04-12 16:33:53'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
