--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -1997,6 +1997,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: REQ_SGMNT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _l0_upt_
     type: timestamp
     nullable: true
