--- a/src/datasets/DS_SAP_01_VBAK/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBAK/pbt_aspects.yml
@@ -814,6 +814,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: HANDOVERLOC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _SOPROMET_LRESN
     type: string
     nullable: true
@@ -1164,6 +1171,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: ZZ_CAR_DEPOT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: ZZ_PRIOR
     type: string
     nullable: true
@@ -1171,7 +1185,28 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_OVER_H
+  - name: ZZ_ROOT_CAUSE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_INT_CRDR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_VEDAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _BITMYM_REF_BOOK
     type: string
     nullable: true
     metadata:
