--- a/src/datasets/DS_SAP_01_VBKD/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBKD/pbt_aspects.yml
@@ -688,6 +688,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: FARR_RELTYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: J_1TPBUPL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
