--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -1997,6 +1997,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _l0_upt_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: REQ_SGMNT
     type: string
     nullable: true
@@ -2004,8 +2011,43 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
+  - name: LOC_PHY_HANDOVR_GOODS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HANDOVR_LOC_DTTM
     type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: US_FED_GOVT_FLD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CHAR_VAL_1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CHAR_VAL_2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CHAR_VAL_3
+    type: string
     nullable: true
     metadata:
       description: ''
