--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1344,6 +1344,34 @@ pipelines:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_LINE_bbn:
+    name: SAP_01_MD_SLS_ORDR_LINE_bbn
+    description: ''
+    author: fsano1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-12 18:36:10'
+    modifiedAt: '2023-04-12 18:37:53'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TVAGT
+      - datasets/DS_SAP_01_TVAPT
+      - datasets/DS_SAP_01_TVM1T
+      - datasets/DS_SAP_01_TVM2T
+      - datasets/DS_SAP_01_TVM3T
+      - datasets/DS_SAP_01_TVM5T
+      - datasets/DS_SAP_01_TVRO
+      - datasets/DS_SAP_01_TVROT
+      - datasets/DS_SAP_01_TVST
+      - datasets/DS_SAP_01_TVSTT
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBAP
+      - datasets/DS_SAP_01_VBKD
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
