JEKT-136 bbn done 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_bbn     - Dataset        - MD_SLS_ORDR_LINE        - DS_SAP_01_VBAP

--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -492,13 +492,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_GRP_3_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: MATL_GRP_4
     type: string
     nullable: true
@@ -1997,13 +1990,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: REQ_SGMNT
     type: string
     nullable: true
@@ -2048,6 +2034,20 @@ schema:
       tags: []
   - name: CHAR_VAL_3
     type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EQUIP_RSDL_VAL
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l0_upt_
+    type: timestamp
     nullable: true
     metadata:
       description: ''
