--- a/src/datasets/DS_SAP_01_VBAP/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBAP/pbt_aspects.yml
@@ -2,6 +2,13 @@ version: 1
 schema:
   type: struct
   fields:
+  - name: MANDT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _deleted_
     type: string
     nullable: true
@@ -17,13 +24,6 @@ schema:
       mappings: []
       tags: []
   - name: POSNR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -2719,6 +2719,20 @@ schema:
       mappings: []
       tags: []
   - name: ZZ_SURG_DATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _BITMYM_SVALUE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: Z_FBK_IDF
     type: string
     nullable: true
     metadata:
