JEKT-136 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_bba     - Dataset        - MD_SLS_ORDR_LINE

--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -492,6 +492,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_3_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_GRP_4
     type: string
     nullable: true
@@ -2034,13 +2041,6 @@ schema:
       tags: []
   - name: CHAR_VAL_3
     type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EQUIP_RSDL_VAL
-    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
