JEKT-353 Add config for ANS, MTK, VST 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_DOC_PTNR_FUNC

--- a/src/pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC/pbt_aspects.yml
+++ b/src/pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC/pbt_aspects.yml
@@ -3,13 +3,16 @@ configurations:
 - GEU
 - FSN
 - ATL
+- VST
 - MBP
 - BBA
 - BBL
 - P01
 - MRS
+- MTK
 - default
 - HCS
+- ANS
 - BBN
 - SVS
 - TAI
